<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?android:attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/profil_title"
            app:contentInsetStart="30dp"
            />
        <!--1part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/profil"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/profil_title"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center_vertical"
                android:text="@string/profil_preference"
                />
        </LinearLayout>

        <!--2part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_light2"
            android:divider="@drawable/divider2"
            android:showDividers="end">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/profil_title"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/profil_information"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/profil_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/profil_full_name"
                    android:theme="@style/ThemeUnderlined"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/profil_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/profil_email"
                    android:theme="@style/ThemeUnderlined"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/HintText">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/profil_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/profil_phone"
                    android:theme="@style/ThemeUnderlined"
                    android:layout_marginBottom="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginRight="25dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/profil_all_alerte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="start"
                android:text="@string/profil_alerte"
                android:textAppearance="@style/profil_alerte"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/profil_alerte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:choiceMode="multipleChoice"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                tools:listitem="@layout/profil_alerte"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profil_notification"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:textAppearance="@style/HintText"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/profil_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:theme="@style/ThemeUnderlined"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="40dp"/>

        </LinearLayout>
        <!--3part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/profil_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil_terminate"
                android:textAppearance="@style/profil_button"
                android:background="@color/orange"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                />
        </LinearLayout>

    </LinearLayout>



</ScrollView>