<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <!--1part-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<android.support.v7.widget.AppCompatImageView-->
                <!--android:id="@+id/home_graph"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginBottom="25dp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:src="@drawable/graph" />-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical">-->

                <!--<android.support.v7.widget.AppCompatTextView-->
                    <!--android:id="@+id/home_balance_title"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginEnd="10dp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginStart="10dp"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:text="@string/home_balance_title"-->
                    <!--android:textAppearance="@style/home_balance_title" />-->

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal">-->

                    <!--<android.support.v7.widget.AppCompatTextView-->
                        <!--android:id="@+id/home_balance_value"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginEnd="10dp"-->
                        <!--android:layout_marginLeft="10dp"-->
                        <!--android:layout_marginRight="10dp"-->
                        <!--android:layout_marginStart="10dp"-->
                        <!--android:singleLine="true"-->
                        <!--android:textAppearance="@style/home_balance_value"-->
                        <!--tools:text="175"/>-->

                    <!--<android.support.v7.widget.AppCompatTextView-->
                        <!--android:id="@+id/home_balance_country"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginEnd="10dp"-->
                        <!--android:layout_marginRight="10dp"-->
                        <!--android:singleLine="true"-->
                        <!--android:textAppearance="@style/home_balance_country"-->
                        <!--tools:text="ue"/>-->
                <!--</LinearLayout>-->

                <!--<android.support.v7.widget.AppCompatTextView-->
                    <!--android:id="@+id/home_balance_date"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginEnd="10dp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginStart="10dp"-->
                    <!--android:singleLine="true"-->
                    <!--android:textAppearance="@style/home_balance_date"-->
                    <!--tools:text="Valable jusqu'au 28.11.2017"/>-->

                <!--<android.support.v7.widget.AppCompatTextView-->
                    <!--android:id="@+id/home_balance_button"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="25dp"-->
                    <!--android:layout_marginEnd="10dp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginStart="10dp"-->
                    <!--android:text="@string/home_balance_detail"-->
                    <!--android:textAppearance="@style/home_balance_button" />-->
            <!--</LinearLayout>-->

        <!--</LinearLayout>-->

        <include layout="@layout/header"/>

        <!--2part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <!--1row-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="25dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="25dp"
                        android:src="@drawable/order2" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="25dp"
                        android:layout_marginTop="25dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/home_order_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:textAppearance="@style/home_order_top"
                            tools:text="commande #65748" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/home_order_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:textAppearance="@style/home_order_state"
                            tools:text="En cours" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="25dp"
                        android:layout_marginTop="25dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:text="@string/home_order_top"
                            android:textAppearance="@style/home_order_top" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/home_order_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:textAppearance="@style/home_order_date"
                            tools:text="16.DEC - 14h" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--2row-->
            <LinearLayout
                android:id="@+id/home_adress_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="100dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/home_adress_detail1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="25dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:textAppearance="@style/home_adress_detail1"
                            tools:text="Paris Saint Charles" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/home_adress_detail2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="25dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginStart="25dp"
                            android:textAppearance="@style/home_adress_detail2"
                            tools:text="95 Rue Saint Charles" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/home_adress_detail3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="25dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginStart="25dp"
                            android:textAppearance="@style/home_adress_detail3"
                            tools:text="75015 paris" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/home_adress_detail4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="25dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginStart="25dp"
                            android:drawableLeft="@drawable/phone"
                            android:drawableStart="@drawable/phone"
                            android:textAppearance="@style/home_adress_detail4"
                            tools:text="0138475894" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/home_adress_open"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:gravity="end"
                            android:textAppearance="@style/home_adress_open"
                            tools:text="ouvert" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/home_adress_map"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/map" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <!--3part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/home_bottom_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/home_button"
                android:foreground="?android:selectableItemBackground"
                android:drawableEnd="@drawable/localisation"
                android:drawableRight="@drawable/localisation"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/home_bottom_search"
                android:textAppearance="@style/home_bottom_button" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/home_bottom_detail"
                android:textAppearance="@style/home_bottom_detail" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/home_bottom_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:drawableTop="@drawable/contact"
                android:text="@string/home_bottom_contact"
                android:textAppearance="@style/home_bottom_contact" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>